[package]
name = "fs2020_linker"
description = "Link Arduino with Flight simulator 2020"
license = "MIT"
version = "0.1.0"
authors = ["Diego Restrepo <diegorestrepo68@utp.edu.co>", "Juan Tamayo <juancyepest@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.1"

[dependencies]
